--- a/GOOGLEPAGE-CLONE/google.html
+++ b/GOOGLEPAGE-CLONE/google.html
@@ -130,35 +130,39 @@
     </main>
 
     <footer class="footer">
-      <p class="first-line">Nigeria</p>
+      <p class="footer-top">Nigeria</p>
 
-        <div class="left-section">
-        <a
-          href="https://about.google/?utm_source=google-NG&utm_medium=referral&utm_campaign=hp-footer&fg=1"
-          >About</a
-        >
-        <a
-          href="https://ads.google.com/intl/en_ng/home/?subid=ww-ww-et-g-awa-a-g_hpafoot1_1!o2&utm_source=google.com&utm_medium=referral&utm_campaign=google_hpafooter&fg=1"
-          >Advertising</a
-        >
-        <a
-          href="https://smallbusiness.withgoogle.com/intl/en-ssa/?subid=ng_en-et-g-awa-a-g_hpbfoot1_1!o2&utm_source=google&utm_medium=ep&utm_campaign=google_hpbfooter&utm_content=google_hpbfooter&gmbsrc=ng-en_GB-et-gs-z-gmb-s-z-u~sb-g4sb_srvcs-u#!/"
-          >Business</a
-        >
-        <a href="https://www.google.com/search/howsearchworks/?fg=1"
-          >How to Search works</a
-        >
-        <div class="center-section">
-        <a href="https://bit.ly/3sy06mO" target="_blank"
-        >Carbon neutral since 2007</a
-      >
+      <div class="footer-bottom">
+        <div class="left">
+          <a
+            href="https://about.google/?utm_source=google-NG&utm_medium=referral&utm_campaign=hp-footer&fg=1"
+            >About</a
+          >
+          <a
+            href="https://ads.google.com/intl/en_ng/home/?subid=ww-ww-et-g-awa-a-g_hpafoot1_1!o2&utm_source=google.com&utm_medium=referral&utm_campaign=google_hpafooter&fg=1"
+            >Advertising</a
+          >
+          <a
+            href="https://smallbusiness.withgoogle.com/intl/en-ssa/?subid=ng_en-et-g-awa-a-g_hpbfoot1_1!o2&utm_source=google&utm_medium=ep&utm_campaign=google_hpbfooter&utm_content=google_hpbfooter&gmbsrc=ng-en_GB-et-gs-z-gmb-s-z-u~sb-g4sb_srvcs-u#!/"
+            >Business</a
+          >
+          <a href="https://www.google.com/search/howsearchworks/?fg=1"
+            >How to Search works</a
+          >
+        </div>
+        <div class="center">
+          <img src="./icons/leaf.png" alt="Leaf Image" />
+          <a href="https://bit.ly/3sy06mO" target="_blank"
+            >Carbon neutral since 2007</a
+          >
+        </div>
+
+        <div class="right">
+          <a href="https://policies.google.com/privacy?hl=en-NG&fg=1">Privacy</a>
+          <a href="https://policies.google.com/terms?hl=en-NG&fg=1">Terms</a>
+          <a href="">Settings</a>
+        </div>
       </div>
-
-      <div class="right-section">
-        <a href="">Privacy</a>
-        <a href="">Terms</a>
-        <a href="">Settings</a>
-      </div> 
     </footer>
   </body>
 </html>
