added header text for navigation

--- a/3-COLUMN-CARD/index.html
+++ b/3-COLUMN-CARD/index.html
@@ -19,13 +19,15 @@
   </head>
   <body>
     <header>
-      <h3>
-        <a href="grid.html">Click to preview: 3 - Column Card Grid Layout</a>
-      </h3>
+      <h3>3 COLUMN CARD USING FLEX BOX</h3>
+      <h3><a href="grid.html" target="_blank"
+        >Click to preview: 3 - Column Card Grid Layout</a
+      ></h3>
     </header>
 
     <main>
       <div id="CAR-INFO">
+        
         <div id="SEDANS">
           <div><img src="icons/icon-sedans.svg" alt="Car Image" /></div>
           <h2>SEDANS</h2>
