using the right sentence in the header tag

--- a/3-COLUMN-CARD/index.html
+++ b/3-COLUMN-CARD/index.html
@@ -21,7 +21,7 @@
     <header>
       <h3>3 COLUMN CARD USING FLEX BOX</h3>
       <h3><a href="grid.html" target="_blank"
-        >Click to preview: 3 - Column Card Grid Layout</a
+        >Click to preview: Multidimensional Layout Using Grid</a
       ></h3>
     </header>
 
